# qtqml_challenges

./: README.md
TV_Remote_Control/: CMakeLists.txt  Main.qml  main.cpp  res.qrc
TV_Remote_Control/android/: AndroidManifest.xml
business_card_ui/: CMakeLists.txt  Main.qml  main.cpp  qrc.qrc
business_card_ui/android/: AndroidManifest.xml
